@@ -1,6 +1,6 @@
 Package: Rcmdr
 Version: 1.9-3
-Date: 2012/10/23
+Date: 2012/10/26
 Title: R Commander
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Liviu", "Andronic", role = "ctb"),
